<resources>
    <string name="app_name">Planet</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email1">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
</resources>